refactor service layer