@@ -4,8 +4,12 @@ import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.time.LocalDate;
 import java.time.temporal.ChronoUnit;
+import java.util.ArrayList;
+import java.util.Collection;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
@@ -14,10 +18,12 @@ import org.springframework.transaction.annotation.Transactional;
 
 import com.vfa.vault.dto.GoalDTO;
 import com.vfa.vault.entity.Account;
+import com.vfa.vault.entity.AccountType;
 import com.vfa.vault.entity.Goal;
 import com.vfa.vault.exception.ResourceNotFoundException;
 import com.vfa.vault.repository.AccountRepository;
 import com.vfa.vault.repository.GoalRepository;
+import com.vfa.vault.service.AccountBalanceService.BalanceBreakdown;
 
 import lombok.RequiredArgsConstructor;
 
@@ -28,18 +34,22 @@ public class GoalService {
     private final GoalRepository goalRepository;
     private final AccountRepository accountRepository;
     private final AccountBalanceService accountBalanceService;
+    private final InvestmentBalanceService investmentBalanceService;
 
     @Transactional(readOnly = true)
     public List<GoalDTO.Response> findAllActive() {
-        return goalRepository.findByIsActiveTrueOrderByCreatedAtDesc()
-                .stream().map(this::toResponse).toList();
+        List<Goal> goals = goalRepository.findByIsActiveTrueOrderByCreatedAtDesc();
+        GoalBalanceContext context = loadBalanceContext(goals);
+        return goals.stream()
+                .map(goal -> toResponse(goal, context))
+                .toList();
     }
 
     @Transactional(readOnly = true)
     public GoalDTO.Response findById(UUID id) {
-        return goalRepository.findById(id)
-                .map(this::toResponse)
+        Goal goal = goalRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Goal", id));
+        return toResponse(goal, loadBalanceContext(List.of(goal)));
     }
 
     @Transactional
@@ -52,12 +62,11 @@ public class GoalService {
         goal.setDeadline(request.deadline());
 
         if (request.accountIds() != null && !request.accountIds().isEmpty()) {
-            List<Account> accounts = accountRepository.findAllById(request.accountIds());
-            goal.setLinkedAccounts(new HashSet<>(accounts));
+            goal.setLinkedAccounts(resolveLinkedAccounts(request.accountIds()));
         }
 
-        // savedAmount remains for backward compatibility but is no longer authoritative
-        return toResponse(goalRepository.save(goal));
+        Goal saved = goalRepository.save(goal);
+        return toResponse(saved, loadBalanceContext(List.of(saved)));
     }
 
     @Transactional
@@ -72,13 +81,14 @@ public class GoalService {
         goal.setDeadline(request.deadline());
 
         if (request.accountIds() != null) {
-            // replace linked accounts
-            List<Account> accounts = accountRepository.findAllById(request.accountIds());
             goal.getLinkedAccounts().clear();
-            goal.getLinkedAccounts().addAll(accounts);
+            if (!request.accountIds().isEmpty()) {
+                goal.getLinkedAccounts().addAll(resolveLinkedAccounts(request.accountIds()));
+            }
         }
 
-        return toResponse(goalRepository.save(goal));
+        Goal saved = goalRepository.save(goal);
+        return toResponse(saved, loadBalanceContext(List.of(saved)));
     }
 
     @Transactional
@@ -97,7 +107,8 @@ public class GoalService {
                 .orElseThrow(() -> new ResourceNotFoundException("Account", accountId));
 
         goal.getLinkedAccounts().add(account);
-        return toResponse(goalRepository.save(goal));
+        Goal saved = goalRepository.save(goal);
+        return toResponse(saved, loadBalanceContext(List.of(saved)));
     }
 
     @Transactional
@@ -108,56 +119,95 @@ public class GoalService {
                 .orElseThrow(() -> new ResourceNotFoundException("Account", accountId));
 
         goal.getLinkedAccounts().remove(account);
-        return toResponse(goalRepository.save(goal));
+        Goal saved = goalRepository.save(goal);
+        return toResponse(saved, loadBalanceContext(List.of(saved)));
     }
 
-    private GoalDTO.Response toResponse(Goal g) {
-        // derive savedAmount from linked account balances
-        List<GoalDTO.LinkedAccountSummary> linked = g.getLinkedAccounts().stream()
-            .map(a -> {
-                BigDecimal balance = accountBalanceService.getCalculatedBalance(a.getId());
-                return new GoalDTO.LinkedAccountSummary(
-                    a.getId(),
-                    a.getName(),
-                    a.getAccountType().name(),
-                    balance);
-            }).collect(Collectors.toList());
+    private GoalBalanceContext loadBalanceContext(Collection<Goal> goals) {
+        List<Account> linkedAccounts = goals.stream()
+                .flatMap(goal -> goal.getLinkedAccounts().stream())
+                .distinct()
+                .toList();
+        if (linkedAccounts.isEmpty()) {
+            return new GoalBalanceContext(Map.of(), Map.of());
+        }
+
+        Map<UUID, BalanceBreakdown> breakdowns = accountBalanceService.getBreakdowns(linkedAccounts);
+        List<UUID> investmentIds = linkedAccounts.stream()
+                .filter(account -> account.getAccountType() == AccountType.INVESTMENT)
+                .map(Account::getId)
+                .toList();
+        Map<UUID, BigDecimal> checkpointValues =
+                investmentBalanceService.loadLatestCheckpointValues(investmentIds);
+        return new GoalBalanceContext(breakdowns, checkpointValues);
+    }
+
+    private GoalDTO.Response toResponse(Goal goal, GoalBalanceContext context) {
+        List<GoalDTO.LinkedAccountSummary> linked = goal.getLinkedAccounts().stream()
+                .map(account -> {
+                    BalanceBreakdown breakdown = context.breakdowns().get(account.getId());
+                    BigDecimal contributedBalance = breakdown != null
+                            ? breakdown.calculatedBalance()
+                            : BigDecimal.ZERO;
+                    BigDecimal balance = investmentBalanceService.resolveCurrentValue(
+                            account, contributedBalance, context.checkpointValues());
+                    return new GoalDTO.LinkedAccountSummary(
+                            account.getId(),
+                            account.getName(),
+                            account.getAccountType().name(),
+                            balance);
+                })
+                .collect(Collectors.toCollection(ArrayList::new));
 
         BigDecimal saved = linked.stream()
-            .map(GoalDTO.LinkedAccountSummary::calculatedBalance)
-            .reduce(BigDecimal.ZERO, BigDecimal::add);
+                .map(GoalDTO.LinkedAccountSummary::calculatedBalance)
+                .reduce(BigDecimal.ZERO, BigDecimal::add);
 
         double progress = 0;
-        if (g.getTargetAmount() != null && g.getTargetAmount().compareTo(BigDecimal.ZERO) > 0) {
+        if (goal.getTargetAmount() != null && goal.getTargetAmount().compareTo(BigDecimal.ZERO) > 0) {
             progress = saved
-                    .divide(g.getTargetAmount(), 4, RoundingMode.HALF_UP)
+                    .divide(goal.getTargetAmount(), 4, RoundingMode.HALF_UP)
                     .multiply(BigDecimal.valueOf(100))
                     .doubleValue();
         }
 
         long daysRemaining = 0;
-        if (g.getDeadline() != null) {
-            daysRemaining = ChronoUnit.DAYS.between(LocalDate.now(), g.getDeadline());
-            if (daysRemaining < 0) daysRemaining = 0;
+        if (goal.getDeadline() != null) {
+            daysRemaining = ChronoUnit.DAYS.between(LocalDate.now(), goal.getDeadline());
+            if (daysRemaining < 0) {
+                daysRemaining = 0;
+            }
         }
 
-        boolean isOverdue = g.getDeadline() != null
-                && g.getDeadline().isBefore(LocalDate.now())
-                && saved.compareTo(g.getTargetAmount() == null ? BigDecimal.ZERO : g.getTargetAmount()) < 0;
+        boolean isOverdue = goal.getDeadline() != null
+                && goal.getDeadline().isBefore(LocalDate.now())
+                && saved.compareTo(goal.getTargetAmount() == null ? BigDecimal.ZERO : goal.getTargetAmount()) < 0;
 
         return new GoalDTO.Response(
-                g.getId(),
-                g.getName(),
-                g.getDescription(),
-                g.getTargetAmount(),
+                goal.getId(),
+                goal.getName(),
+                goal.getDescription(),
+                goal.getTargetAmount(),
                 saved,
-                g.getGoalType(),
-                g.getDeadline(),
-                g.getCreatedAt(),
-                g.isActive(),
+                goal.getGoalType(),
+                goal.getDeadline(),
+                goal.getCreatedAt(),
+                goal.isActive(),
                 progress,
                 daysRemaining,
                 isOverdue,
                 linked);
     }
+
+    private Set<Account> resolveLinkedAccounts(Set<UUID> accountIds) {
+        List<Account> accounts = accountRepository.findAllById(accountIds);
+        if (accounts.size() != accountIds.size()) {
+            throw new IllegalArgumentException("One or more account IDs are invalid");
+        }
+        return new HashSet<>(accounts);
+    }
+
+    private record GoalBalanceContext(
+            Map<UUID, BalanceBreakdown> breakdowns,
+            Map<UUID, BigDecimal> checkpointValues) {}
 }
